--- a/Learny/Views/CourseModules/Edit.cshtml
+++ b/Learny/Views/CourseModules/Edit.cshtml
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group hidden">
             @Html.LabelFor(model => model.CourseId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CourseId, new { htmlAttributes = new { @class = "form-control" } })
