--- a/Learny/Views/ModuleActivities/Edit.cshtml
+++ b/Learny/Views/ModuleActivities/Edit.cshtml
@@ -16,13 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group hidden">
-            @Html.LabelFor(model => model.CourseModuleId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CourseModuleId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CourseModuleId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.CourseModuleId, new { @class = "control-label col-md-2"})
 
         <div class="form-group">
             @Html.LabelFor(model => model.ActivityTypes, htmlAttributes: new { @class = "control-label col-md-2" })
