--- a/Learny/Views/ModuleActivities/Create.cshtml
+++ b/Learny/Views/ModuleActivities/Create.cshtml
@@ -6,6 +6,7 @@
 
 <h2>@ViewBag.Title</h2>
 <h4>Modul: @Html.DisplayFor(model => model.ModuleName)</h4>
+<h4>Kurs: @Html.DisplayFor(model => model.CourseName)</h4>
 
 
 @using (Html.BeginForm())
