--- a/Learny/Views/CourseModules/Create.cshtml
+++ b/Learny/Views/CourseModules/Create.cshtml
@@ -4,14 +4,14 @@
 }
 
 <h2>Ny modul</h2>
-<h4>Kurs: @Html.DisplayFor(model => model.FullCourseName)</h4>
+<h4>Kurs: @Html.ActionLink(Model.FullCourseName, "Details", "Courses", new { id = Model.CourseId }, null)</h4>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
+                @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
         
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
