--- a/Learny/Views/Account/EditStudent.cshtml
+++ b/Learny/Views/Account/EditStudent.cshtml
@@ -15,6 +15,9 @@
 
 
         <hr />
+
+        @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Courses, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
