--- a/Learny/Views/ModuleActivities/Details.cshtml
+++ b/Learny/Views/ModuleActivities/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h5>Modul: @Html.ActionLink(Model.ModuleName, "Details", "CourseModules", new { id = Model.CourseModuleId }, null)  Kurs: @Html.ActionLink(Model.CourseName, "Details", "Courses", new { id = Model.CourseId}, null)</h5>
+<h5>Kurs: @Html.ActionLink(Model.CourseName, "Details", "Courses", new { id = Model.CourseId}, null)  Modul: @Html.ActionLink(Model.ModuleName, "Details", "CourseModules", new { id = Model.CourseModuleId }, null)</h5>
 
 <h5>@Html.DisplayFor(model => model.ActivityTypeName)</h5>
 <h2>@Html.DisplayFor(model => model.Name)</h2>
