--- a/Learny/Views/ModuleActivities/Create.cshtml
+++ b/Learny/Views/ModuleActivities/Create.cshtml
@@ -4,9 +4,11 @@
     ViewBag.Title = "Ny aktivitet";
 }
 
+<h5>Kurs: @Html.ActionLink(Model.CourseName, "Details", "Courses", new { id = Model.CourseId }, null) Modul: @Html.ActionLink(Model.ModuleName, "Details", "CourseModules", new { id = Model.CourseModuleId }, null)</h5>
+
 <h2>@ViewBag.Title</h2>
-<h4>Modul: @Html.ActionLink(Model.ModuleName, "Details", "CourseModules", new { id = Model.CourseModuleId }, null)</h4>
-<h4>Kurs: @Html.ActionLink(Model.CourseName, "Details", "Courses", new { id = Model.CourseId }, null)</h4>
+
+
 
 
 @using (Html.BeginForm())
