--- a/Learny/Views/ModuleActivities/Details.cshtml
+++ b/Learny/Views/ModuleActivities/Details.cshtml
@@ -24,10 +24,20 @@
                 @Html.DisplayFor(model => model.EndDate)
             </p>
 
-            <p>
-                @Html.ActionLink("Tillbaka till modulen", "Details", "CourseModules", new { Id = Model.CourseModuleId }, null) |
-                @Html.ActionLink("Ändra", "Edit", new { id = Model.Id })
-            </p>
+            @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
+            {
+                <p>
+                    @Html.ActionLink("Tillbaka till modulen", "Details", "CourseModules", new { Id = Model.CourseModuleId }, null)
+                    |
+                    @Html.ActionLink("Ändra", "Edit", new { id = Model.Id })
+                </p>
+            }
+            else
+            {
+                <p>
+                    @Html.ActionLink("Tillbaka till modulen", "Details", "CourseModules", new { Id = Model.CourseModuleId }, null)
+                </p>
+            }
 
 
         </div>
