--- a/Learny/Views/CourseModules/Edit.cshtml
+++ b/Learny/Views/CourseModules/Edit.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Learny.ViewModels.ModuleViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Ändra modul";
 }
 
-<h2>Redigera</h2>
+<h2>Ändra modul</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Kurs modul</h4>
+        <h4>@Model.Name</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -59,7 +59,7 @@
 }
 
 <div>
-    @Html.ActionLink("Tillbaka till modul översikt", "Details", "CourseModules", new { id = Model.Id }, null)
+    @Html.ActionLink("Tillbaka till modulen", "Details", "CourseModules", new { id = Model.Id }, null)
 </div>
 
 @section Scripts {
