--- a/Learny/Views/Courses/Edit.cshtml
+++ b/Learny/Views/Courses/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Learny.ViewModels.CourseCreateViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Ändra kurs";
 }
 
-<h2>Redigera</h2>
+<h2>Ändra kurs</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Kurs</h4>
+        <h4>@Model.FullCourseName</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -66,7 +66,7 @@
 }
 
 <div>
-    @Html.ActionLink("Tillbaka till kurs översikt", "Details", "Courses", new { id = Model.Id }, null)
+    @Html.ActionLink("Tillbaka till kursen", "Details", "Courses", new { id = Model.Id }, null)
 </div>
 
 @section Scripts {
