--- a/Learny/Views/ModuleActivities/Edit.cshtml
+++ b/Learny/Views/ModuleActivities/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Learny.ViewModels.ModuleActivityCreateViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Ändra aktivitet";
 }
 
-<h2>Redigera</h2>
+<h2>Ändra aktivitet</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Modul aktivitet</h4>
+        <h4>@Model.Name</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -69,14 +69,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Spara" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Tillbaka till aktivitet översikt", "Details", "ModuleActivities", new { id = Model.Id }, null)
+    @Html.ActionLink("Tillbaka till aktiviteten", "Details", "ModuleActivities", new { id = Model.Id }, null)
 </div>
 
 @section Scripts {
