--- a/Learny/Views/Student/Details.cshtml
+++ b/Learny/Views/Student/Details.cshtml
@@ -25,7 +25,7 @@
             @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
             {
                 <p>
-                    @Html.ActionLink("Visa alla elever", "Index") |
+                    @*@Html.ActionLink("Visa alla elever", "Index") |*@
                     @Html.ActionLink("Ändra", "Edit", new { email = Model.Email })
                 </p>
             }
